--- a/style.css
+++ b/style.css
@@ -197,8 +197,7 @@ section{
 }
 
 .about-img img{
-    width: 24vw;
-    border-radius: 50%;
+    width: 20vw;
     box-shadow: 0 0 25px var(--main-color);
     transition: 0.4s ease-in-out;
 }
@@ -241,64 +240,57 @@ section{
     margin: 5rem 0;
 }
 
-.services{
+
+
+
+.skills{
     background-color: var(--bg-color);
     color: black;
 }
 
-.services h2{
+.skills h2{
     color: var(--text-color);
 }
 
-.services-container{
+.skills-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     align-items: center;
     gap: 2.5rem;
 }
 
-.service-box{
+.skills-box{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--main-color);
-    height: 450px;
-    border-radius: 3rem;
+    border-radius: 1rem;
     cursor: pointer;
     border: 5px solid transparent;
     transition: 0.4s ease-in-out;
 }
 
-.service-box:hover{
+.skills-box:hover{
     background-color: var(--second-bg-color);
     color: var(--main-color);
     border: 5px solid var(--main-color);
     transform: scale(1.03);
 }
 
-.service-info{
+
+.skills-info{
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
-    padding: 5rem;
-}
-.service-info i{
-    font-size: 8rem;
+    padding: 3rem;
 }
 
-
-.service-info h4{
-    font-size: 3.5rem;
+.skills-info h4{
+    font-size: 2.5rem;
     margin: 2rem 0;
     font-weight: 800;
-}
-
-.service-info p{
-    font-size: 1.2rem;
-    font-weight: 600;
-    line-height: 1.7;
 }
 
 
@@ -417,7 +409,7 @@ section{
         margin: 2rem 0;
     }
     .about img{
-        width: 52vw;
+        width: 56vw;
     }
 
     .contact form{
